setting up wallet. commiting before

--- a/package.json
+++ b/package.json
@@ -112,7 +112,8 @@
     "react-router-redux": "^4.0.4",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
-    "source-map-support": "^0.4.0"
+    "source-map-support": "^0.4.0",
+    "zhe-wallet": "0.0.2"
   },
   "devEngines": {
     "node": "4.x || 5.x || 6.x",
