--- a/package.json
+++ b/package.json
@@ -105,11 +105,14 @@
     "blockchain.info": "^2.4.2",
     "css-modules-require-hook": "^4.0.0",
     "electron-debug": "^1.0.0",
+    "flag-icon-css": "^2.3.0",
     "font-awesome": "^4.6.3",
     "postcss": "^5.0.21",
     "python-shell": "^0.4.0",
+    "qrcode.react": "^0.6.1",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
+    "react-fontawesome": "^1.1.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
     "react-router-redux": "^4.0.4",
