--- a/package.json
+++ b/package.json
@@ -109,9 +109,10 @@
     "postcss": "^5.0.21",
     "python-shell": "^0.4.0",
     "qrcode.react": "^0.6.1",
-    "react": "^15.1.0",
+    "react": "^15.1 .0",
     "react-dom": "^15.1.0",
     "react-fontawesome": "^1.1.0",
+    "react-input-range": "^0.9.0",
     "react-modal": "^1.3.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
