--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "python-shell": "^0.4.0",
     "qrcode.react": "^0.6.1",
     "react": "^15.1 .0",
+    "react-d3-components": "^0.6.4",
     "react-dom": "^15.1.0",
     "react-fontawesome": "^1.1.0",
     "react-modal": "^1.3.0",
