--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "react-router-redux": "^4.0.4",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
+    "socket.io-client": "^1.4.8",
     "source-map-support": "^0.4.0",
     "zhe-wallet": "0.0.2"
   },
