--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "css-modules-require-hook": "^4.0.0",
     "electron-debug": "^1.0.0",
     "font-awesome": "^4.6.3",
+    "isomorphic-fetch": "^2.2.1",
     "postcss": "^5.0.21",
     "python-shell": "^0.4.0",
     "qrcode.react": "^0.6.1",
