--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "electron-debug": "^1.0.0",
     "font-awesome": "^4.6.3",
     "isomorphic-fetch": "^2.2.1",
+    "lodash": "^4.13.1",
     "postcss": "^5.0.21",
     "python-shell": "^0.4.0",
     "qrcode.react": "^0.6.1",
